--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,12 @@ okhttp3Version = "4.12.0"
 retrofit2Version = "2.11.0"
 ### jakeWharton
 jakeWhartonVersion = "1.0.0"
+### Room
+roomVersion = "2.6.1"
+### lifecycleViewmodelCompose
+viewModelVersion = "2.7.0"
+### networkAdapter
+networkAdapterVersion = "4.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -68,6 +74,14 @@ squareup-retrofit2ConverterMoshi = { group = "com.squareup.retrofit2", name = "c
 jakeWharton-retrofit2ConverterKotlin = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "jakeWhartonVersion" }
 # json [Github](https://github.com/Kotlin/kotlinx.serialization)
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxVersion" }
+# room database
+androidx-room = { group = "androidx.room", name = "room-runtime", version.ref = "roomVersion" }
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomVersion" }
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomVersion" }
+# lifecycle view model
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "viewModelVersion" }
+# network adapter
+network-adapterRxJava2 = { group = "com.github.haroldadmin:NetworkResponseAdapter", name = "network-adapter", version.ref = "networkAdapterVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
