--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,9 @@ roomVersion = "2.6.1"
 viewModelVersion = "2.7.0"
 ### networkAdapter
 networkAdapterVersion = "4.0.1"
+### rxjava
+rxJavaVersion = "2.2.21"
+rxAndroidVersion = "2.1.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -71,6 +74,9 @@ squareup-retrofit2AdapterRxJava2 = { group = "com.squareup.retrofit2", name = "a
 squareup-retrofit2AdapterRxJava3 = { group = "com.squareup.retrofit2", name = "adapter-rxjava3", version.ref = "retrofit2Version" }
 squareup-retrofit2ConverterGson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit2Version" }
 squareup-retrofit2ConverterMoshi = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofit2Version" }
+# rxjava
+reactivex-rxjava2-rxjava = { module = "io.reactivex.rxjava2:rxjava", version.ref = "rxJavaVersion" }
+reactivex-rxjava2-rxandroid = { module = "io.reactivex.rxjava2:rxandroid", version.ref = "rxAndroidVersion" }
 jakeWharton-retrofit2ConverterKotlin = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "jakeWhartonVersion" }
 # json [Github](https://github.com/Kotlin/kotlinx.serialization)
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxVersion" }
@@ -82,6 +88,9 @@ androidx-room-compiler = { group = "androidx.room", name = "room-compiler", vers
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "viewModelVersion" }
 # network adapter
 network-adapterRxJava2 = { group = "com.github.haroldadmin:NetworkResponseAdapter", name = "network-adapter", version.ref = "networkAdapterVersion" }
+
+[bundles]
+rxjava = ["reactivex-rxjava2-rxandroid", "reactivex-rxjava2-rxjava"]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
